initial commit, theme troubles is next

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-/vendor
+
 /node_modules
-.env
-storage/debugbar/
-app/Modules
-config/cms.*.php
-themes/
-public/themes/*/
-public/modules/*/
-database/migrations/
-!resources/lang/en/
-resources/lang/*
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.env
+/.idea
+/.vagrant
 storage/
+storage/debugbar/
+Homestead.json
+Homestead.yaml
+npm-debug.log
+
