--- a/composer.json
+++ b/composer.json
@@ -1,69 +1,119 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "laravel/framework": "5.3.*",
-        "composer/installers": "dev-master",
-
-        "nwidart/laravel-modules": "1.14.*",
-        "filp/whoops": "2.*",
-
-        "cysha/theme-default": "dev-master",
-        "cysha/theme-default-admin": "dev-master",
-        "cysha/theme-adminlte": "dev-master",
-
-        "cysha/module-core": "dev-master",
-        "cysha/module-auth": "dev-master",
-        "cysha/module-admin": "dev-master"
+  "name": "laravel/laravel",
+  "description": "The Laravel Framework.",
+  "keywords": [
+    "framework",
+    "laravel"
+  ],
+  "license": "MIT",
+  "type": "project",
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/cysha/installers"
     },
-    "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "orchestra/testbench": "~3.1",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
-        "symfony/dom-crawler": "~3.1",
-        "symfony/css-selector": "~3.1"
+    {
+      "type": "composer",
+      "url": "https://packages.phoenixcms.org/"
     },
-    "autoload": {
-        "classmap": [
-            "database"
-        ],
-        "psr-4": {
-            "Cms\\": "app/",
-            "Cms\\Modules\\": "app/Modules"
-        },
-        "files": [
-            "app/Helpers/Debug.php"
-        ]
+    {
+      "type": "composer",
+      "url": "https://packages.cybershade.org/"
     },
-    "autoload-dev": {
-        "classmap": [
-            "tests/TestCase.php"
-        ]
+    {
+      "type": "vcs",
+      "url": "https://github.com/cysha/installers"
     },
-    "repositories": [
-        { "type": "composer", "url": "https://packages.phoenixcms.org/" },
-        { "type": "composer", "url": "https://packages.cybershade.org/" },
-        { "type": "vcs", "url": "https://github.com/cysha/installers" }
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/theme-default.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/theme-default-admin.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/theme-adminlte.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/theme-cysha.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/module-core.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/module-auth.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/cleansoftnl/module-admin.git"
+    }
+  ],
+  "require": {
+    "barryvdh/laravel-ide-helper": "^2.3",
+    "composer/installers": "dev-master",
+    "cysha/module-admin": "dev-master",
+    "cysha/module-auth": "dev-master",
+    "cysha/module-core": "dev-master",
+    "cysha/theme-adminlte": "dev-master",
+    "cysha/theme-default": "dev-master",
+    "cysha/theme-default-admin": "dev-master",
+    "doctrine/dbal": "^2.5",
+    "filp/whoops": "^2.1",
+    "guzzlehttp/guzzle": "^6.2",
+    "igaster/laravel-theme": "*",
+    "laravel/framework": "5.3.*",
+    "nwidart/laravel-modules": "1.14.*",
+    "teepluss/theme": "^2.0",
+    "wikimedia/composer-merge-plugin": "^1.3",
+    "yajra/laravel-datatables-oracle": "^6.0"
+  },
+  "require-dev": {
+    "fzaninotto/faker": "~1.4",
+    "orchestra/testbench": "~3.1",
+    "mockery/mockery": "0.9.*",
+    "phpunit/phpunit": "~4.0",
+    "phpspec/phpspec": "~2.1",
+    "symfony/dom-crawler": "~3.1",
+    "symfony/css-selector": "~3.1"
+  },
+  "autoload": {
+    "classmap": [
+      "database"
     ],
-    "scripts": {
-        "post-install-cmd": [
-            "php artisan cms:update"
-        ],
-        "post-update-cmd": [
-            "php artisan cms:update"
-        ],
-        "post-create-project-cmd": [
-            "php -r \"copy('.env.example', '.env');\"",
-            "php artisan key:generate"
-        ]
+    "psr-4": {
+      "App\\": "app/",
+      "App\\Modules\\": "app/Modules",
+      "Modules\\": "Modules/"
     },
-    "config": {
-        "preferred-install": "dev"
-    },
-    "minimum-stability": "dev"
+    "files": [
+      "app/Helpers/Debug.php"
+    ]
+  },
+  "autoload-dev": {
+    "classmap": []
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "php artisan cms:update"
+    ],
+    "post-update-cmd": [
+      "php artisan cms:update"
+    ],
+    "post-create-project-cmd": [
+      "php -r \"copy('.env.example', '.env');\"",
+      "php artisan key:generate"
+    ]
+  }
 }
